add chapter9 add hint

--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
 	.gongzhuSkill{
 		color: fuchsia;
 		font-weight:bold;
+	}	
+	.hintInfo{
+		color: teal;
+		font-weight:bold;
 	}
   </style>
     
@@ -192,14 +196,18 @@
       原始文件来自意念挖坟的ip君@github 20150826<br/>
       服装数据来自jillhx@贴吧 20150902<br/>
       设计图数据来自amy_翡翠@贴吧 20150820<br/>
-      Update 20150902:<br/>
+      Update 20150902:
       <ul>
         <li>自己做了一版0902服装的, 在ip君更新前临时使用=w=</li>
         <li>主要修改内容: 0902衣柜, 竞技场和联盟委托权重, 因报错去掉了google脚本</li>
-        <li>by: 黑的升华</li>
       </ul>
+      Update 20150904:
+      <ul>	  
+        <li>添加第9章临时权重(来自苗苗夹心@贴吧), 添加过关提示功能, 添加技能提示功能</li>
+	  </ul>
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
+	  二次修改by黑的升华, 贴吧ID: seal100x
     </div>
     <hr/>
     <div id='filtersTop'>
@@ -210,8 +218,9 @@
           <select id="theme" onChange="changeTheme()" style="display: none"></select>
           </div>
 		<div>
-			<span id="tagInfo"></span>
-			<span id="skillInfo"></span>
+			<div id="tagInfo"></div>
+			<div id="skillInfo"></div>
+			<div id="hintInfo"></div>
 		</div>
         <div class='facet'>
           <div>
