--- a/index.html
+++ b/index.html
@@ -193,21 +193,14 @@
   <body>
     <div class='announcement'>
       Nikki's wardrobe. By Ivan's workshop<br/>
-      原始文件来自意念挖坟的ip君@github 20150826<br/>
-      服装数据来自jillhx@贴吧 20150902<br/>
-      设计图数据来自amy_翡翠@贴吧 20150820<br/>
-      Update 20150902:
-      <ul>
-        <li>自己做了一版0902服装的, 在ip君更新前临时使用=w=</li>
-        <li>主要修改内容: 0902衣柜, 竞技场和联盟委托权重, 因报错去掉了google脚本</li>
-      </ul>
-      Update 20150904:
-      <ul>	  
-        <li>添加第9章临时权重(来自苗苗夹心@贴吧), 添加过关提示功能, 添加技能提示功能</li>
-	  </ul>
+      原始文件来自意念挖坟的ip君@github 20150905<br/>
+      服装数据来自jillhx@QQ群 20150905<br/>
+      设计图数据来自amy_翡翠@贴吧 1.4.5<br/><br/>
+	  
+	  IP君已经恢复更新, 如需使用请至<a href="http://ivangift.github.io/nikkiup2u3/">http://ivangift.github.io/nikkiup2u3/</a>, 该版本会转为自用版本<br/>
+	  
+	  
       衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
-      功能错误或者有新需求请去<a href="http://tieba.baidu.com/p/3792563906">主贴</a>汇报<br/>
-	  二次修改by黑的升华, 贴吧ID: seal100x
     </div>
     <hr/>
     <div id='filtersTop'>
