移除筛选选项

--- a/index.html
+++ b/index.html
@@ -206,8 +206,7 @@
     <div id='filtersTop'>
       <form name="filter_form">
         <div>
-          <input type="radio" name="mode" value="filtering" onClick="changeMode(true)" checked/> 筛选
-          <input type="radio" name="mode" value="ranking" onClick="changeMode(false)" /> 计分
+          <input type="radio" name="mode" value="ranking" onClick="changeMode(false)" checked/> 计分
           <select id="theme" onChange="changeTheme()" style="display: none"></select>
           </div>
 		<div>
