--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <div id='filtersTop'>
       <form name="filter_form">
         <div>
-          <input type="radio" name="mode" value="ranking" onClick="changeMode(false)" checked/> 计分
+          <input style="display:none" type="radio" name="mode" value="ranking" onClick="changeMode(false)" checked/> 计分
           <select id="theme" onChange="changeTheme()" style="display: none"></select>
           </div>
 		<div>
