--- a/index.html
+++ b/index.html
@@ -3,25 +3,32 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>奇迹暖暖在线配装器</title>
     <script type='text/javascript' charset="UTF-8" src='jquery.js'></script>
-    <script type='text/javascript' charset="UTF-8" src='jquery.floatThead.min.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='jquery.freezeheader.js'></script>
     <script type='text/javascript' charset="UTF-8" src='wardrobe.js'></script>
     <script type='text/javascript' charset="UTF-8" src='scoring.js'></script>
     <script type='text/javascript' charset="UTF-8" src='levels.js'></script>
     <script type='text/javascript' charset="UTF-8" src='model.js'></script>
     <script type='text/javascript' charset="UTF-8" src='pattern.js'></script>
     <script type='text/javascript' charset="UTF-8" src='nikki.js'></script>
+	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
     <style>
+	body{
+		padding:20px
+	}
     table
     {
       font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
       font-size: 12px;
       background: #fff;
-      margin: 10px 20px;
       border-collapse: collapse;
       text-align: center;
       table-layout: fixed;
     }
+	thead{
+		z-index: 10;
+		background: WhiteSmoke;
+	}
     th
     {
       font-size: 14px;
@@ -29,19 +36,29 @@
       color: #039;
       padding: 10px 8px;
       border-bottom: 2px solid #6678b1;
+	  text-align:center;
     }
     th.score {
       width: 55px;
     }
     th.name {
-      width: 100px;
+      width: 130px;
     }
     th.category {
       width: 110px;
     }
-    th.top {
-      width: 75px;
-    }
+	th.th_number {
+	  width: 50px;
+	}
+	th.th_from {
+      width: 140px;	
+	}
+	th.th_tag {
+      width: 120px;	
+	}
+	th.th_nbsp {
+      width: 50px;		
+	}
     td
     {
       color: #669;
@@ -187,6 +204,9 @@
 		color: teal;
 		font-weight:bold;
 	}
+	span.badge{
+		background: SlateGray;
+	}
   </style>
     
   </head>
@@ -298,7 +318,7 @@
     </div>
     <hr>
     <div id='shoppingCartContainer'>
-      已选择的衣服 <input type="checkbox" id="accessoriesHelper" checked />自动选择饰品 <button onclick="clearShoppingCart()">清空购物车</button>
+      已选择的衣服 <button class="btn btn-default" onclick="clearShoppingCart()">清空购物车</button>
       <div id='shoppingCart'>
       </div>
     </div>
