add lianmeng skill info

--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
 		color: fuchsia;
 		font-weight:bold;
 	}	
+	.normalSkill{
+		color: grey;
+		font-weight:bold;
+	}	
 	.hintInfo{
 		color: teal;
 		font-weight:bold;
@@ -215,7 +219,8 @@
       Nikki's wardrobe. By Ivan's workshop<br/>
       原始文件来自意念挖坟的ip君@github 20150905<br/>
       服装数据来自jillhx@QQ群 20150905<br/>
-      设计图数据来自amy_翡翠@贴吧 1.4.5<br/><br/>
+      设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
+	  技能数据来自奇迹暖暖玉人@微博 20150907<br/><br/>
 	  
 	  IP君已经恢复更新, 如需使用请至<a href="http://ivangift.github.io/nikkiup2u3/">http://ivangift.github.io/nikkiup2u3/</a>, 该版本会转为自用版本<br/>
 	  
