--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
       原始文件来自意念挖坟的ip君@github 20150905<br/>
       服装数据来自jillhx@QQ群 20150905<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-	  技能数据来自奇迹暖暖玉人@微博 20150907<br/><br/>
+	  技能数据来自奇迹暖暖玉人@微博 20150907<br/>
+	  第九章数据来自流水喵@微博 20150906<br/><br/>
 	  
 	  IP君已经恢复更新, 如需使用请至<a href="http://ivangift.github.io/nikkiup2u3/">http://ivangift.github.io/nikkiup2u3/</a>, 该版本会转为自用版本<br/>
 	  
