fix 9-z-2 fix wardrobe

--- a/index.html
+++ b/index.html
@@ -216,17 +216,18 @@
   </head>
   <body>
     <div class='announcement'>
-      Nikki's wardrobe. By Ivan's workshop<br/>
-      原始文件来自意念挖坟的ip君@github 20150905<br/>
-      服装数据来自jillhx@QQ群 20150905<br/>
+       奇迹暖暖在线配装器 by:黑的升华<br/>
+      <font style="color:red">原始文件来自意念挖坟的ip君@github 20150905</font><br/>
+      服装数据来自jillhx@QQ群 20150909, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
 	  技能数据来自奇迹暖暖玉人@微博 20150907<br/>
 	  第九章数据来自流水喵@微博 20150906<br/><br/>
 	  
-	  IP君已经恢复更新, 如需使用请至<a href="http://ivangift.github.io/nikkiup2u3/">http://ivangift.github.io/nikkiup2u3/</a>, 该版本会转为自用版本<br/>
+	  IP君已经恢复更新, 如需使用请至<a href="http://ivangift.github.io/nikkiup2u3/">http://ivangift.github.io/nikkiup2u3/</a><br/>
+	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>测试中=w= <br/>
 	  
+	  0909 update: 9-支2权重修复, 衣柜数据更新到0909版本, 移动端尚未更新<br/>
 	  
-      衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
     </div>
     <hr/>
     <div id='filtersTop'>
