--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 	  IP君已经恢复更新, 如需使用请至<a href="http://ivangift.github.io/nikkiup2u3/">http://ivangift.github.io/nikkiup2u3/</a><br/>
 	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>测试中=w= <br/>
 	  
-	  0909 update: 9-支2权重修复, 衣柜数据更新到0909版本, 移动端尚未更新<br/>
+	  0909 update: 9-支2权重修复, 9-9-3tag修复, 衣柜数据更新到0909版本, 移动端尚未更新<br/>
 	  
     </div>
     <hr/>
