--- a/index.html
+++ b/index.html
@@ -211,22 +211,35 @@
 	span.badge{
 		background: SlateGray;
 	}
+	.gotop{
+		font-family: 'Glyphicons Halflings';
+		font-style: normal;
+		font-weight: 400;
+		line-height: 1;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+		cursor: pointer;
+	}
+	.gotop:before{
+		content: "\e113";
+	}
   </style>
     
   </head>
   <body>
     <div class='announcement'>
        奇迹暖暖在线配装器 by:黑的升华<br/>
-      <font style="color:red">原始文件来自意念挖坟的ip君@github 20150905</font><br/>
+      <font style="color:red">原始文件来自意念挖坟的ip君@github 20150905</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版: http://ivangift.github.io/nikkiup2u3/</a><br/>
       服装数据来自jillhx@QQ群 20150909, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
 	  技能数据来自奇迹暖暖玉人@微博 20150907<br/>
 	  第九章数据来自流水喵@微博 20150906<br/><br/>
 	  
-	  IP君已经恢复更新, 如需使用请至<a href="http://ivangift.github.io/nikkiup2u3/">http://ivangift.github.io/nikkiup2u3/</a><br/>
 	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>测试中=w= <br/>
 	  
 	  0909 update: 9-支2权重修复, 9-9-3tag修复, 衣柜数据更新到0909版本, 移动端尚未更新<br/>
+	  0910 update: 修女头饰修复<br/>
+	  0911 update: 添加返回最上按钮, 添加顶配模式(试验中)<br/>
 	  
     </div>
     <hr/>
@@ -320,6 +333,8 @@
           <input type="checkbox" name="inventory" value="own" onClick="onChangeUiFilter()" checked />拥有
           <span id='inventoryCount'> </span>
           <input type="checkbox" name="inventory" value="missing" onClick="onChangeUiFilter()" checked /> 没有
+          <input type="checkbox" name="inventory" value="toplevel" onClick="onChangeUiFilter()" checked /> 顶配模式
+		  <input type="checkbox" name="inventory" value="sortbyscore" onClick="onChangeUiFilter()"/> 饰品分数排序
         </div>
       </form>
     </div>
