--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>测试中=w= <br/>
 	  <a href="strategy.html">常用攻略</a><br/>
 	  
-	  0915update: 更新ip君0915数据, 补全联盟委托技能, 添加常用攻略页面
+	  0915update: 更新ip君0915数据, 补全联盟委托技能, 添加常用攻略页面, 添加均衡权重功能(测试ing)
     </div>
     <hr/>
     <div id='filtersTop'>
@@ -333,6 +333,7 @@
           <input type="checkbox" name="inventory" value="missing" onClick="onChangeUiFilter()" checked /> 没有
           <input type="checkbox" name="inventory" value="toplevel" onClick="onChangeUiFilter()" checked /> 顶配模式
 		  <input type="checkbox" name="inventory" value="sortbyscore" onClick="onChangeUiFilter()"/> 饰品分数排序
+          <input type="checkbox" name="inventory" value="balance" onClick="onChangeUiFilter()"/> 均衡权重
         </div>
       </form>
     </div>
