--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <input type="checkbox" name="inventory" value="missing" onClick="onChangeUiFilter()" checked /> 没有
           <input type="checkbox" name="inventory" value="toplevel" onClick="onChangeUiFilter()" checked /> 顶配模式
 		  <input type="checkbox" name="inventory" value="sortbyscore" onClick="onChangeUiFilter()"/> 饰品分数排序
-          <input type="checkbox" name="inventory" value="balance" onClick="onChangeUiFilter()"/> 均衡权重
+          <input type="checkbox" name="inventory" value="balance" onClick="onChangeUiFilter();changeTheme()"/> 均衡权重
         </div>
       </form>
     </div>
