--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
 	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>测试中=w= <br/>
 	  <a href="strategy.html">常用攻略</a><br/>
 	  
-	  0915update: 更新ip君0915数据, 补全联盟委托技能, 添加常用攻略页面, 添加均衡权重功能(测试ing)
+	  0915update: 更新ip君0915数据, 补全联盟委托技能, 添加常用攻略页面, 添加均衡权重功能(测试ing)<br/>
+	  0918update: 更新花嫁套装<br/>
     </div>
     <hr/>
     <div id='filtersTop'>
