--- a/index.html
+++ b/index.html
@@ -241,6 +241,7 @@
 	  0915update: 更新ip君0915数据, 补全联盟委托技能, 添加常用攻略页面, 添加均衡权重功能(测试ing)<br/>
 	  0918update: 更新花嫁套装, 更新新版分数区间(与IP君略不同)<br/>
 	  0922update: 更新小兔子=w=, 更新公众号链阳套<br/>
+	  0922update2: 修复: 修复游园*黑,金发娃娃*珍稀,甜度*珍稀,时空颈圈*玫<br/>
     </div>
     <hr/>
     <div id='filtersTop'>
