--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 	  0922update: 更新小兔子=w=, 更新公众号链阳套<br/>
 	  0922update2: 修复: 游园*黑,金发娃娃*珍稀,甜度*珍稀,时空颈圈*玫<br/>
 	  0925update: 原始文件更新为ivangift's github@20150925(IP君最新版), 本次更新调整了全部JJC和联盟权重, 更新部分新衣服<br/>
-	  在此基础上, 删除"苹果联邦高级成衣展"的tag需求, 修复:游园*黑,金发娃娃*珍稀,甜度*珍稀,时空颈圈*玫<br/>
+	  在此基础上, 删除"苹果联邦高级成衣展"的tag需求, 修复:游园*黑,金发娃娃*珍稀,甜度*珍稀,时空颈圈*玫,花嫁头纱<br/>
     </div>
     <hr/>
     <div id='filtersTop'>
