--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
 	.gotop:before{
 		content: "\e113";
 	}
+	#update_history{
+		display: none;
+	}
   </style>
     
   </head>
@@ -236,12 +239,20 @@
 	  第九章数据来自流水喵@微博 20150906<br/><br/>
 	  
 	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>测试中=w= <br/>
-	  <a href="strategy.html">常用攻略</a><br/>
+	  <a href="strategy.html">常用攻略</a><br/><br/>
 	  
+	  <a href="#" id="show_history">历史更新</a><br/>
+	  <div id="update_history">
+	  0902update: 己做了一版0902服装的, 在ip君更新前临时使用=w=<br/>
+	  主要修改内容: 0902衣柜, 竞技场和联盟委托权重, 因报错去掉了google脚本<br/>
+	  0909update: 9-支2权重修复, 9-9-3tag修复, 衣柜数据更新到0909版本, 移动端尚未更新<br/>
+	  0910update: 修女头饰修复<br/>
+	  0911update: 添加返回最上按钮, 添加顶配模式(试验中)<br/>
 	  0915update: 更新ip君0915数据, 补全联盟委托技能, 添加常用攻略页面, 添加均衡权重功能(测试ing)<br/>
 	  0918update: 更新花嫁套装, 更新新版分数区间(与IP君略不同)<br/>
 	  0922update: 更新小兔子=w=, 更新公众号链阳套<br/>
 	  0922update2: 修复: 游园*黑,金发娃娃*珍稀,甜度*珍稀,时空颈圈*玫<br/>
+	  </div>
 	  0925update: 原始文件更新为ivangift's github@20150925(IP君最新版), 本次更新调整了全部JJC和联盟权重, 更新部分新衣服<br/>
 	  在此基础上, 删除"苹果联邦高级成衣展"的tag需求, 修复:游园*黑,金发娃娃*珍稀,甜度*珍稀,时空颈圈*玫,花嫁头纱<br/>
     </div>
