--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 	  0925update: 原始文件更新为ivangift's github@20150925(IP君最新版), 本次更新调整了全部JJC和联盟权重, 更新部分新衣服<br/>
 	  在此基础上, 删除"苹果联邦高级成衣展"的tag需求, 修复:游园*黑,金发娃娃*珍稀,甜度*珍稀,时空颈圈*玫,花嫁头纱<br/>
 	  0925update2: 修复:怪盗下装*华丽, 广寒精灵*白, 添加:锁扣包<br/>
+	  0925update3: 添加:灵幔, 漫纱轻舞, 纱舞, 漫纱舞鞋(今天更新好多次<br/>
   
     </div>
     <hr/>
