--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 	  0925update4: 修复:乐园气球(会不会有5<br/>
 	  </div>
 	  0929update1: 国庆更新第一发, 添加梦恋奇迹5关权重
+	  0929update2: 修复活动第三关权重
   
     </div>
     <hr/>
