--- a/index.html
+++ b/index.html
@@ -258,8 +258,9 @@
 	  0925update3: 添加:灵幔, 漫纱轻舞, 纱舞, 漫纱舞鞋(今天更新好多次<br/>
 	  0925update4: 修复:乐园气球(会不会有5<br/>
 	  </div>
-	  0929update1: 国庆更新第一发, 添加梦恋奇迹5关权重
-	  0929update2: 修复活动第三关权重
+	  0929update1: 国庆更新第一发, 添加梦恋奇迹5关权重<br/>
+	  0929update2: 修复活动第三关权重<br/>
+	  0929update3: 添加3套婚纱, 添加蓝冰瞳<br/>
   
     </div>
     <hr/>
