--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
 	  0929update1: 国庆更新第一发, 添加梦恋奇迹5关权重<br/>
 	  0929update2: 修复活动第三关权重<br/>
 	  0929update3: 添加3套婚纱, 添加蓝冰瞳<br/>
-	  0929update3: 添加幻阁限定, 仙履屋及染色 ps:魔幻领结是挎包..是挎包..挎包..包..<br/>
+	  0929update4: 添加幻阁限定, 仙履屋及染色 ps:魔幻领结是挎包..是挎包..挎包..包..<br/>
+	  0929update5: 修复部分服装错误<br/>
   
     </div>
     <hr/>
