--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
 	  0929update3: 添加3套婚纱, 添加蓝冰瞳<br/>
 	  0929update4: 添加幻阁限定, 仙履屋及染色 ps:魔幻领结是挎包..是挎包..挎包..包..<br/>
 	  0929update5: 修复部分服装错误<br/>
+	  0930update: 添加鸡米包, 玩趣*嘻嘻<br/>
   
     </div>
     <hr/>
