--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 	  </div>
 	  长假的某天update: 易用性优化<br/>
 	  1014update1: 第10章属性添加, 部分提示添加, 技能懒得写了=.=<br/>
-	  1014update2: 修复了一下排序, 可能会有bug<br/>
+	  1014update2: 修复了一下排序, 应该没bug了<br/>
 	  第十章缓慢更新中<br/>
   
     </div>
