--- a/index.html
+++ b/index.html
@@ -233,10 +233,10 @@
     <div class='announcement'>
        奇迹暖暖在线配装器 by:黑的升华<br/>
       <font style="color:red">原始文件来自意念挖坟的ip君@ivangift's github 20150925</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版: http://ivangift.github.io/nikkiup2u3/</a><br/>
-      服装数据来自jillhx@QQ群 20150924, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
+      服装数据来自jillhx@QQ群 20151016, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
       设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
-	  技能数据来自奇迹暖暖玉人@微博 20150907<br/>
-	  第九章数据来自流水喵@微博 20150906<br/><br/>
+	  技能数据来自奇迹暖暖玉人@微博 20151006<br/>
+	  第十章数据来自流水喵&兔子@QQ群 20151014<br/><br/>
 	  
 	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>测试中=w= <br/>
 	  <a href="strategy.html">常用攻略</a><br/><br/>
@@ -263,12 +263,16 @@
 	  0929update4: 添加幻阁限定, 仙履屋及染色 ps:魔幻领结是挎包..是挎包..挎包..包..<br/>
 	  0929update5: 修复部分服装错误<br/>
 	  0930update: 添加鸡米包, 玩趣*嘻嘻<br/>
-	  </div>
 	  长假的某天update: 易用性优化<br/>
 	  1014update1: 第10章属性添加, 部分提示添加, 技能懒得写了=.=<br/>
 	  1014update2: 修复了一下排序, 应该没bug了<br/>
-	  第十章缓慢更新中<br/>
-  
+	  </div>
+	  1017update: <br/>
+	  更新衣柜数据为 jillhx@QQ群 20151016<br/>
+	  更新第十章权重数据及过关提示为 流水喵&兔子@QQ群 20151014 (技能数据暂时没有文字版, 有需要可以去流水喵的微博查看)<br/>
+	  更正部分联盟委托技能<br/>
+	  本次更新后需要注意的衣服: 魔幻领结 颈饰-->项链，藤萝链 手饰左-->手持左<br/>
+	  本次更新后改名的衣服: 蓝宝石(下装)-->束腰蓝裙，甜心巧克力(袜子)-->甜心女仆袜, 晚霞(鞋子)-->绮霞景<br/>
     </div>
     <hr/>
     <div id='filtersTop'>
