--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 	  更正部分联盟委托技能<br/>
 	  本次更新后需要注意的衣服: 魔幻领结 颈饰-->项链，藤萝链 手饰左-->手持左<br/>
 	  本次更新后改名的衣服: 蓝宝石(下装)-->束腰蓝裙，甜心巧克力(袜子)-->甜心女仆袜, 晚霞(鞋子)-->绮霞景, 月饼-->寒月<br/>
-	  1017update2: 添加了一个搭配赛提醒小时钟, 以纪念那离我而去的冰晶玫瑰...(暂不支持时差党)
+	  1017update2: 添加了一个搭配赛提醒小时钟, 以纪念那离我而去的水晶玫瑰...(时差党可能会有些问题)
 	</div>
     <hr/>
     <div id='filtersTop'>
