--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
        奇迹暖暖在线配装器 by:黑的升华<br/>
       <font style="color:red">原始文件来自意念挖坟的ip君@ivangift's github 20150925</font><a href="http://ivangift.github.io/nikkiup2u3/">IP君原版: http://ivangift.github.io/nikkiup2u3/</a><br/>
       服装数据来自jillhx@QQ群 20151020, 衣服信息纠错请去<a href="http://tieba.baidu.com/p/3860789814">jillhx的新衣柜楼</a>汇报<br/>
-      设计图数据来自amy_翡翠@贴吧 1.4.5<br/>
+      设计图数据来自amy_翡翠@QQ群 1.5.2<br/>
 	  技能数据来自奇迹暖暖玉人@微博 20151006<br/>
 	  第十章数据来自流水喵&兔子@QQ群 20151014<br/><br/>
 	  
@@ -283,6 +283,7 @@
 	  1017update2: 添加了一个搭配赛提醒小时钟, 以纪念那离我而去的水晶玫瑰...(时差党可能会有些问题)<br/><br/>
 	  1020update: 更新精灵的月下舞会, 数据及攻略来自白残(*/ω\*)@QQ群, <b>tag数据仅供参考, 请自行调整</b>, 小时钟稍后修复<br/>
 	  1020update2: 更新衣柜数据为 jillhx@QQ群 20151020, 修复小时钟<br/>
+	  1020update3: 更新设计图数据为 amy_翡翠@QQ群 1.5.2<br/>
 	</div>
     <hr/>
     <div id='filtersTop'>
