--- a/index.html
+++ b/index.html
@@ -273,17 +273,19 @@
 	  长假的某天update: 易用性优化<br/>
 	  1014update1: 第10章属性添加, 部分提示添加, 技能懒得写了=.=<br/>
 	  1014update2: 修复了一下排序, 应该没bug了<br/>
-	  </div>
 	  1017update: <br/>
 	  更新衣柜数据为 jillhx@QQ群 20151016<br/>
 	  更新第十章权重数据及过关提示为 流水喵&兔子@QQ群 20151014 (技能数据暂时没有文字版, 有需要可以去流水喵的微博查看)<br/>
 	  更正部分联盟委托技能<br/>
 	  本次更新后需要注意的衣服: 魔幻领结 颈饰-->项链，藤萝链 手饰左-->手持左<br/>
 	  本次更新后改名的衣服: 蓝宝石(下装)-->束腰蓝裙，甜心巧克力(袜子)-->甜心女仆袜, 晚霞(鞋子)-->绮霞景, 月饼-->寒月<br/>
-	  1017update2: 添加了一个搭配赛提醒小时钟, 以纪念那离我而去的水晶玫瑰...(时差党可能会有些问题)<br/><br/>
+	  1017update2: 添加了一个搭配赛提醒小时钟, 以纪念那离我而去的水晶玫瑰...(时差党可能会有些问题)<br/>
+	  </div>
 	  1020update: 更新精灵的月下舞会, 数据及攻略来自白残(*/ω\*)@QQ群, <b>tag数据仅供参考, 请自行调整</b>, 小时钟稍后修复<br/>
 	  1020update2: 更新衣柜数据为 jillhx@QQ群 20151020, 修复小时钟<br/>
-	  1020update3: 更新设计图数据为 amy_翡翠@QQ群 1.5.2<br/>
+	  1020update3: 更新设计图数据为 amy_翡翠@QQ群 1.5.2<br/><br/>
+	  
+	  ip君已回归, 需要准确数据的可以继续使用<a href="http://ivangift.github.io/nikkiup2u3/">IP君的原版</a>~ 这里会恢复划水状态做一些奇奇怪怪的东西<br/>
 	</div>
     <hr/>
     <div id='filtersTop'>
