--- a/index.html
+++ b/index.html
@@ -286,10 +286,11 @@
 	  1020update: 更新精灵的月下舞会, 数据及攻略来自白残(*/ω\*)@QQ群, tag数据仅供参考, 请自行调整, 小时钟稍后修复<br/>
 	  1020update2: 更新衣柜数据为 jillhx@QQ群 20151020, 修复小时钟<br/>
 	  1020update3: 更新设计图数据为 amy_翡翠@QQ群 1.5.2<br/>
-	  </div>
 	  1021update: 更新权重数据为 意念挖坟的ip君@ivangift's github 20151021<br/>
+	  </div>
 	  1029update: 更新第一个奇奇怪怪的东西:一键攻略, 仿流水喵攻略排版, 部分功能未实装, 有需要可以自己P上去=w=。<br/>
 	  1029update2: 发现被强制使用兼容模式的情况比较多, 添加meta以建议非IE浏览器优先使用webkit内核, IE浏览器优先使用最高级文档模式, 效果未知<br/>
+	  1030update: 更新衣柜<br/>
 	  未(you)来(sheng)预(zhi)定(nian)功能: 高分权重, 衣柜记录, 原材料计算, 筛选功能, 一键双倍攻略, 衣服分值按心级浮动<br/><br/>
 	  
 	  ip君已回归, 需要准确数据的可以继续使用<a href="http://ivangift.github.io/nikkiup2u3/">IP君的原版</a>~ 这里会恢复划水状态做一些奇奇怪怪的东西<br/>
