--- a/index.html
+++ b/index.html
@@ -292,9 +292,10 @@
 	  1029update: 更新第一个奇奇怪怪的东西:一键攻略, 仿流水喵攻略排版, 部分功能未实装, 有需要可以自己P上去=w=。<br/>
 	  1029update2: 发现被强制使用兼容模式的情况比较多, 添加meta以建议非IE浏览器优先使用webkit内核, IE浏览器优先使用最高级文档模式, 效果未知<br/>
 	  1030update: 更新衣柜<br/>
-	  1030update2: 优化一键攻略<br/><br/>
+	  1030update2: 优化一键攻略<br/>
+	  1030update3: 修复绮幻万圣夜和万圣帽的id, 之前有添加过这两件衣服的需要重新添加, 发现其他id问题请反馈~<br/><br/>
 	  
-	  未(you)来(sheng)预(zhi)定(nian)功能: 高分权重, 衣柜记录, 原材料计算, 筛选功能, 一键双倍攻略, 衣服分值按心级浮动<br/><br/>
+	  未(you)来(sheng)预(zhi)定(nian)功能: 高分权重, 衣柜记录(doing), 原材料计算, 筛选功能, 一键双倍攻略, 衣服分值按心级浮动<br/><br/>
 	  
 	  ip君已回归, 需要准确数据的可以继续使用<a href="http://ivangift.github.io/nikkiup2u3/">IP君的原版</a>~ 这里会恢复划水状态做一些奇奇怪怪的东西<br/>
 	</div>
