--- a/index.html
+++ b/index.html
@@ -294,7 +294,8 @@
 	  1030update: 更新衣柜<br/>
 	  1030update2: 优化一键攻略<br/>
 	  1030update3: 修复绮幻万圣夜和万圣帽的id, 之前有添加过这两件衣服的需要重新添加, 发现其他id问题请反馈~<br/>
-	  1030update4: 一键攻略支持自定义关卡<br/><br/>
+	  1030update4: 一键攻略支持自定义关卡<br/>
+	  1030update5: 修复梦想之音<br/><br/>
 	  
 	  未(you)来(sheng)预(zhi)定(nian)功能: 高分权重, 衣柜记录(doing), 原材料计算, 筛选功能, 一键双倍攻略, 衣服分值按心级浮动<br/><br/>
 	  
