--- a/index.html
+++ b/index.html
@@ -292,16 +292,17 @@
 	  1020update2: 更新衣柜数据为 jillhx@QQ群 20151020, 修复小时钟<br/>
 	  1020update3: 更新设计图数据为 amy_翡翠@QQ群 1.5.2<br/>
 	  1021update: 更新权重数据为 意念挖坟的ip君@ivangift's github 20151021<br/>
-	  </div>
 	  1029update: 更新第一个奇奇怪怪的东西:一键攻略, 仿流水喵攻略排版, 部分功能未实装, 有需要可以自己P上去=w=。<br/>
 	  1029update2: 发现被强制使用兼容模式的情况比较多, 添加meta以建议非IE浏览器优先使用webkit内核, IE浏览器优先使用最高级文档模式, 效果未知<br/>
 	  1030update: 更新衣柜<br/>
 	  1030update2: 优化一键攻略<br/>
 	  1030update3: 修复绮幻万圣夜和万圣帽的id, 之前有添加过这两件衣服的需要重新添加, 发现其他id问题请反馈~<br/>
 	  1030update4: 一键攻略支持自定义关卡<br/>
-	  1030update5: 修复梦想之音<br/><br/>
+	  1030update5: 修复梦想之音<br/>
+	  </div>
+	  1101update: 一键攻略更新, 如无特殊情况不会再对该功能进行大规模改动, 缺少的数据会根据网友贡献逐步收录<br/><br/>
 	  
-	  未(you)来(sheng)预(zhi)定(nian)功能: 高分权重, 衣柜记录(doing), 原材料计算, 筛选功能, 一键双倍攻略, 衣服分值按心级浮动<br/><br/>
+	  未(you)来(sheng)预(zhi)定(nian)功能: 高分权重, 衣柜记录(testing), 原材料计算(doing), 筛选功能(todo), 一键双倍攻略<br/><br/>
 	  
 	  ip君已回归, 需要准确数据的可以继续使用<a href="http://ivangift.github.io/nikkiup2u3/">IP君的原版</a>~ 这里会恢复划水状态做一些奇奇怪怪的东西<br/>
 	</div>
@@ -423,6 +424,7 @@
     <hr>
     <p>我拥有的服装 （复制衣橱文本框内容以备份衣橱）</p>
     <textarea id="myClothes" rows=10 style="width:600px"></textarea><br/>
+    <p>衣柜数量记录 （复制衣橱文本框内容以备份衣橱）</p>
     <textarea id="myClothesNum" rows=10 style="width:600px"></textarea>
     <br/>
     <button onClick="loadCustomInventory()">Update inventory</button>
