--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 	  </div>
 	  1101update: 一键攻略更新, 如无特殊情况不会再对该功能进行大规模改动, 缺少的数据会根据网友贡献逐步收录<br/>
 	  1102update: 更新衣柜记录, 打开方式: 高级选项 >> 衣柜数量记录, 应该会有BUG。搭配赛计时器改为36小时内变红(我才不会说我还剩10小时的时候才参赛<br/>	  
+	  1106update: 更新昼夜回廊, 近期计划重做移动版, 有好的建议可以发给我(主要是排版), 顺便在考虑要不要做个APP<br/>	  
 	  <br/>
 	  
 	  未(you)来(sheng)预(zhi)定(nian)功能: 高分权重, 衣柜记录(done), 原材料计算(doing), 筛选功能(todo), 一键双倍攻略<br/><br/>
