--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 		  <span id="advanced_options_span">
 			<div class="checkbox"><label><input type="checkbox" class="fliter" value="sortbyscore" /> 饰品分数排序</label></div>
 			<div class="checkbox"><label><input type="checkbox" class="fliter" value="balance" /> 均衡权重</label></div>
-			<div class="checkbox"><label><input type="checkbox" class="fliter" value="clothes_num" /> 衣柜数量记录</label></div>
+			<div class="checkbox"><label><input type="checkbox" class="fliter" value="clothes_num" disabled /> 衣柜数量记录</label></div>
 		  </span>
 		</div>
       </form>
