--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script type='text/javascript' charset="UTF-8" src='onekeystrategy.js'></script>
     <script type='text/javascript' charset="UTF-8" src='nikki.js'></script>
     <script type='text/javascript' charset="UTF-8" src='clock.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='pako.min.js'></script>
+    <script type='text/javascript' charset="UTF-8" src='sharewardrobe.js'></script>
 	<link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="onekeystrategy.css">
 
@@ -260,7 +262,8 @@
 	  
 	  距离搭配赛结束还有<span id="showTime">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>&nbsp;&nbsp;|&nbsp;&nbsp;
 	  <a href="strategy.html">常用攻略</a>&nbsp;&nbsp;|&nbsp;&nbsp;
-	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>(测试中,无限坑的状态=w=)
+	  <a href="http://seal100x.github.io/nikkiup2u3_m/">移动版</a>(测试中,无限坑的状态=w=)&nbsp;&nbsp;|&nbsp;&nbsp;
+     <button onClick="shareWardrobe()">分享衣柜</button>
 	  <br/><br/>
 	  
 	  <a href="#" id="show_history">历史更新</a><br/>
